@startuml
title Cryptify ER Diagram

' hide the spot
hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

entity User {
  *id : integer <<PK>>
  --
  *first_name : string
  --
  *last_name : string
  --
  *email : string
  --
  *password : string
  --
  *role : string
  --
  *areNotificationEnabled : boolean
  --
  *created_at : timestamp <<generated>>
}

entity Tag {
  *transaction_address : string <<CPK>>
  --
  *user_id : string <<CPK, FK>>
  --
  *name : string
}
note "A Tag is a user-friendly\ncustom name a user can\nassign to any transaction\nto classify it." as N1
N1 .. Tag

entity Contact {
  *wallet_address : string <<CPK>>
  --
  *user_id : string <<CPK, FK>>
  --
  *name : string
}
note "A Contact is a user-friendly\ncustom name that can\nhave many wallets so long\nas they are not associated\nto the user." as N2
N2 .. Contact

entity Wallet {
  *wallet_address : string <<CPK>>
  --
  *user_id : string <<CPK, FK>>
  --
  *name : string
  --
  *currency_type : string
}

entity Transaction {
  *transaction_address : string <<PK>>
  --
  *wallet_in_address : string
  --
  *wallet_out_address : string
  --
  *amount : integer
  --
  *created_at : timestamp <<generated>>
}

User ||--o{ Wallet : has
User ||--o{ Contact : has
Contact ||--|| Wallet : describes
User ||--o{ Tag : has
Tag ||--|| Transaction : describes
Wallet }|--o{ Transaction : associated to
@enduml
